<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"  
    android:background="@drawable/taxi">
    <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/textInscChauffeur"
    android:textStyle="italic"
    android:textColor="#A9A9F5"
    android:textSize="30sp"/>
    <EditText 
        android:id="@+id/nomChauffeur"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"    
        android:gravity="center"
        android:layout_marginTop="40dip"
        android:textColor="#000000"
        android:hint="@string/nomChauffeur" 
        android:textSize="20sp"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"/>
    <EditText 
        android:id="@+id/prenomChauffeur"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:hint="@string/prenomChauffeur" 
        android:textSize="20sp"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"/>
    <EditText 
        android:id="@+id/telChauffeur"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:hint="@string/telChauffeur" 
        android:textSize="20sp"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"/>
    <EditText 
        android:id="@+id/matriculeChauffeur"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:textSize="20sp"
        android:hint="@string/matriculeChauffeur" 
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"/>
    <EditText 
        android:id="@+id/utilChauffeur"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:hint="@string/utilChauffeur" 
        android:textSize="20sp"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"/>
    <EditText 
        android:id="@+id/passeChauffeur"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:hint="@string/passeChauffeur" 
        android:textSize="20sp"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"/>
    <Button 
        android:id="@+id/Enreg_Chauffeur"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dip"
        android:text="@string/Enreg_Chauffeur"
        android:background="@drawable/rounded_button"/>
    <Button 
        android:id="@+id/retourInsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/retourInsc"
        android:background="@android:color/transparent"/>
    <TextView
    android:id="@+id/resultat"    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textSize="15sp"
    android:textColor="#000000"/>
    <TextView
    android:id="@+id/copyright"    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textSize="10sp"
    android:text="@+string/copyright"
    android:layout_marginTop="70dip"
    android:layout_marginLeft="230dip"
    android:textColor="#000000"/>
</LinearLayout>