<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"  
    android:background="@drawable/taxi">
    <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/textInscClient"
    android:textStyle="italic"
    android:textColor="#A9A9F5"
    android:textSize="30sp"/>
    <EditText 
        android:id="@+id/nomClient"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"    
        android:gravity="center"
        android:layout_marginTop="40dip"
        android:textColor="#000000"
        android:hint="@string/nomClient" 
        android:textSize="20sp"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"/>
    <EditText 
        android:id="@+id/prenomClient"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"    
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:hint="@string/prenomClient" 
        android:textSize="20sp"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"/>
    <EditText 
        android:id="@+id/telClient"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"    
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:hint="@string/telClient" 
        android:textSize="20sp"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"/>
    <EditText 
        android:id="@+id/utilClient"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"    
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:textSize="20sp"
        android:hint="@string/utilClient" 
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"/>
    <EditText 
        android:id="@+id/passeClient"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"    
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:textSize="20sp"
        android:hint="@string/passeClient" 
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"/>
    <Button 
        android:id="@+id/button_send"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dip"
        android:text="@string/button_send"
        android:background="@drawable/rounded_button"/>
    <Button 
        android:id="@+id/retourInsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/retourInsc"
        android:background="@android:color/transparent"/>
    <TextView
    android:id="@+id/resultat"    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textSize="15sp"
    android:textColor="#000000"/>
    <TextView
    android:id="@+id/copyright"    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textSize="10sp"
    android:text="@+string/copyright"
    android:layout_marginTop="70dip"
    android:layout_marginLeft="230dip"
    android:textColor="#000000"/>
</LinearLayout>