<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"  
    android:background="@drawable/taxi">
    <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/textLogin"
    android:textStyle="italic"
    android:textColor="#A9A9F5"
    android:textSize="30sp"/>
    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="40dip">
    <RadioButton android:id="@+id/cocherClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cocherClient"
        android:onClick="onRadioButtonClicked"
        android:layout_weight="1"/>
    <RadioButton android:id="@+id/cocherChauffeur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cocherChauffeur"
        android:onClick="onRadioButtonClicked"
        android:layout_weight="1"/>
    </LinearLayout>
    <EditText 
        android:id="@+id/nomUtilisateur"
        android:layout_marginTop="20dip"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:textColor="#000000"
        android:hint="@string/nomUtilisateur" 
        android:layout_marginLeft="10dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"/>
    <EditText 
        android:id="@+id/motDePasse"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dip"
        android:hint="@string/motDePasse" 
        android:layout_marginLeft="10dp"
        android:background="@drawable/rounded_edittext"
        android:gravity="center"/>
    <Button 
        android:id="@+id/authentication"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dip"
        android:text="@string/authentication"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:background="@drawable/rounded_button"/>
    <TextView
    android:id="@+id/resultat"    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textSize="15sp"
    android:textColor="#000000"/>
    <Button 
        android:id="@+id/retourMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/retourMain"
        android:background="@android:color/transparent"/>
    <TextView
    android:id="@+id/copyright"    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textSize="10sp"
    android:text="@+string/copyright"
    android:layout_marginLeft="215dp"
    android:layout_marginTop="300dp"
    android:textColor="#000000"/>
</LinearLayout>