<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"  
    android:background="@drawable/taxi">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/textInsc"
    android:textStyle="italic"
    android:textColor="#A9A9F5"
    android:textSize="30sp"/>
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp">
    <Button 
        android:id="@+id/inscr_chauffeur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscr_chauffeur"
        android:padding="25sp"
        android:layout_weight="1"
        android:textColor="#06107C"
        android:textStyle="bold"
        android:shadowRadius="20"
        android:shadowColor="#000000"/>
    <Button 
        android:id="@+id/inscr_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inscr_client"
        android:padding="25sp"
        android:layout_weight="1"
        android:textColor="#06107C"
        android:textStyle="bold"
        android:shadowRadius="20"
        android:shadowColor="#000000"/>
</LinearLayout>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">
    <Button 
        android:id="@+id/retourMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retourMain"
        android:layout_weight="1"
        android:background="@android:color/transparent"/>
    <TextView
    android:id="@+id/copyright"    
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textSize="10sp"
    android:text="@+string/copyright"
    android:layout_marginLeft="215dp"
    android:layout_marginTop="300dp"
    android:textColor="#000000"
    android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>