<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"  
    android:background="@drawable/taxi">
    <TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/text"
    android:textStyle="italic"
    android:textColor="#A9A9F5"
    android:textSize="30sp"
    android:fontFamily="Arial"/>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"  
    android:background="@drawable/taxi">
    <Button 
        android:id="@+id/inscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dip"
        android:text="@string/inscription"
        android:textSize="15sp"
        android:textColor="#06107C"
        android:padding="35sp"
        android:textStyle="bold"
        android:shadowRadius="20"
        android:shadowColor="#000000"
        android:layout_weight="1"/>
    <Button 
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dip"
        android:text="@string/login"
        android:textSize="15sp"
        android:padding="35sp"
        android:textColor="#06107C"
        android:textStyle="bold"
        android:shadowRadius="20"
        android:shadowColor="#000000"
        android:layout_weight="1"/>
</LinearLayout>
<TextView
    android:id="@+id/copyright"    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textSize="10sp"
    android:text="@+string/copyright"
    android:layout_marginTop="100dip"
    android:layout_marginLeft="50dip"
    android:textColor="#000000"/>
</LinearLayout>